--- a/package.json
+++ b/package.json
@@ -4,27 +4,22 @@
   "dependencies": {
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-scripts": "4.0.3",
-    "typescript": "4.2.3",
     "@types/react": "17.0.3",
     "@types/react-dom": "17.0.3"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "webpack serve --mode=development --open --hot --port 3000",
+    "build": "webpack --mode=production"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "css-loader": "5.2.0",
+    "html-webpack-plugin": "5.3.1",
+    "style-loader": "2.0.0",
+    "ts-loader": "8.0.18",
+    "typescript": "4.2.3",
+    "typescript-loader": "1.1.3",
+    "webpack": "5.28.0",
+    "webpack-cli": "4.5.0",
+    "webpack-dev-server": "3.11.2"
   }
 }
