--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "lib": [
       "dom",
       "dom.iterable",
-      "es2020"
+      "esnext"
     ],
     "noFallthroughCasesInSwitch": true
   },
